--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
     }
   </style>
-  <title>Apple Drop</title>
+  <title>Apple Dropper Project</title>
   <meta charset="utf-8">
   <script src="appledropper.js" type="text/javascript" defer></script>
 </head>
