--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    body{
-        background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
-    }
-  </style>
-  <title>Apple Dropper Project</title>
+
+  <title>Jinwook Shin(Jin)'s Project Collection</title>
   <meta charset="utf-8">
-  <script src="appledropper.js" type="text/javascript" defer></script>
+  <!-- <script src="appledropper.js" type="text/javascript" defer></script> -->
 </head>
 
 <body>
-  <h2>Jinwook Shin's CPSC 1045 Apple Dropper Project</h2>
-  <!-- <strong>By Jinwook Shin</strong><br> -->
-  <strong>Instruction : Use the arrow keys or the buttons provided to play the game!</strong><br>
+  <h2>Jinwook Shin(Jin)'s Project Collection</h2>
+  <nav>
+    <ul>
+      <li><a href="appledropper.html">Home</a></li>
+      <!-- <li><a href="menu.html">Menu</a></li>
+      <li><a href="music.html">Music</a></li>
+      <li><a href="jobs.html">Jobs</a></li> -->
+    </ul>
+  </nav>
+  <!-- <strong>Instruction : Use the arrow keys or the buttons provided to play the game!</strong><br>
   <canvas id="myCanvas" style="border-style: solid" width="600px" height="400px"></canvas><br>
   <button type="button" onclick="moveLeft()">Left</button>
   <!-- <input type="text" name="word" id="word1"></input> -->
@@ -22,7 +25,7 @@
   <button type="button" onclick="startTimer()">Start</button>
   <button type="button" onclick="stopTimer()">Stop</button><br><br>
   Dorayaki goal: <strong><span id="goaldisplay"></span></strong>&nbsp;&nbsp;|
-  Dorayaki caught:<strong><span id="output"></span></strong>
+  Dorayaki caught:<strong><span id="output"></span></strong> -->
 
 </body>
 </html>
