--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <canvas id="myCanvas" style="border-style: solid" width="600px" height="400px"></canvas><br>
   <button type="button" onclick="moveLeft()">Left</button>
   <!-- <input type="text" name="word" id="word1"></input> -->
-  <button type="button" onclick="moveRight()">Right</button>
+  <!-- <button type="button" onclick="moveRight()">Right</button>
   <button type="button" onclick="startTimer()">Start</button>
   <button type="button" onclick="stopTimer()">Stop</button><br><br>
   Dorayaki goal: <strong><span id="goaldisplay"></span></strong>&nbsp;&nbsp;|
-  Dorayaki caught:<strong><span id="output"></span></strong> -->
+  Dorayaki caught:<strong><span id="output"></span></strong> --> -->
 
 </body>
 </html>
