--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-
-  <title>Jinwook Shin(Jin)'s Project Collection</title>
   <meta charset="utf-8">
+  <title>Jinwook Shin(Jin)'s Project Collection</title>
+
   <!-- <script src="appledropper.js" type="text/javascript" defer></script> -->
 </head>
 
