--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2>Jinwook Shin(Jin)'s Project Collection</h2>
   <nav>
     <ul>
-      <li><a href="appledropper.html">Home</a></li>
+      <li><a href="appledropper.html">Apple Dropper Project using : JavaScript</a></li>
       <!-- <li><a href="menu.html">Menu</a></li>
       <li><a href="music.html">Music</a></li>
       <li><a href="jobs.html">Jobs</a></li> -->
@@ -25,7 +25,7 @@
   <button type="button" onclick="startTimer()">Start</button>
   <button type="button" onclick="stopTimer()">Stop</button><br><br>
   Dorayaki goal: <strong><span id="goaldisplay"></span></strong>&nbsp;&nbsp;|
-  Dorayaki caught:<strong><span id="output"></span></strong> --> -->
+  Dorayaki caught:<strong><span id="output"></span></strong> -->
 
 </body>
 </html>
