--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2>Jinwook Shin(Jin)'s Project Collection</h2>
   <nav>
     <ul>
-      <li><a href="appledropper.html">Apple Dropper Project using : JavaScript</a></li>
+      <li><a href="appledropper.html">Apple Dropper Project using : JavaScripttttt</a></li>
       <!-- <li><a href="menu.html">Menu</a></li>
       <li><a href="music.html">Music</a></li>
       <li><a href="jobs.html">Jobs</a></li> -->
