--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <h2>Jinwook Shin(Jin)'s Project Collection</h2>
   <nav>
     <ul>
-      <li><a href="appledropper.html">Apple Dropper Project using : JavaScripttttt</a></li>
+      <li><a href="./AppleDropperProject/appledropper.html">JavaScript : Apple Dropper Project</a></li>
+      <li><a href="./GastownClothingStores/index.html">HTML & CSS : Gastown Clothing Stores</a></li>
+      <li>Java : GUI Chess Program (To be further developed)</a></li>
+      <li>SQL & PHP : Food Delivery Website using DATABASE (To be further developed) </a></li>
+      <!-- <li><a href="./GastownClothingStores/index.html">HTML & CSS : Gastown Clothing Stores</a></li> -->
       <!-- <li><a href="menu.html">Menu</a></li>
       <li><a href="music.html">Music</a></li>
       <li><a href="jobs.html">Jobs</a></li> -->
