--- a/GastownClothingStores/index.html
+++ b/GastownClothingStores/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  last modified date : 
+  Click the image to enter. Last modified date : 
   <script>
      document.write(document.lastModified);
   </script>
