--- a/index.html
+++ b/index.html
@@ -1,35 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Jinwook Shin(Jin)'s Project Collection</title>
 
-  <!-- <script src="appledropper.js" type="text/javascript" defer></script> -->
+<head>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Jinwook Shin(Jin)'s Project Collection</title>
+ <link rel="stylesheet" href="javajam.css">
+
+ <script
+ 			  src="https://code.jquery.com/jquery-3.4.1.slim.js"
+ 			  integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
+ 			  crossorigin="anonymous">
+ </script>
 </head>
 
 <body>
-  <h2>Jinwook Shin(Jin)'s Project Collection</h2>
+  <div id="wrapper">
+    <header><h1>Jinwook Shin(Jin)'s Project</h1></header>
+
   <nav>
     <ul>
-      <li><a href="./AppleDropperProject/appledropper.html">JavaScript : Apple Dropper Project</a></li>
-      <li><a href="./GastownClothingStores/index.html">HTML & CSS : Gastown Clothing Stores</a></li>
-      <li>Java : GUI Chess Program (To be further developed)</a></li>
-      <li>SQL & PHP : Food Delivery Website using DATABASE (To be further developed) </a></li>
-      <!-- <li><a href="./GastownClothingStores/index.html">HTML & CSS : Gastown Clothing Stores</a></li> -->
-      <!-- <li><a href="menu.html">Menu</a></li>
-      <li><a href="music.html">Music</a></li>
-      <li><a href="jobs.html">Jobs</a></li> -->
+      <li><a href="index.html">Home</a></li>
+      <li><a href="project.html">Project</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-  <!-- <strong>Instruction : Use the arrow keys or the buttons provided to play the game!</strong><br>
-  <canvas id="myCanvas" style="border-style: solid" width="600px" height="400px"></canvas><br>
-  <button type="button" onclick="moveLeft()">Left</button>
-  <!-- <input type="text" name="word" id="word1"></input> -->
-  <!-- <button type="button" onclick="moveRight()">Right</button>
-  <button type="button" onclick="startTimer()">Start</button>
-  <button type="button" onclick="stopTimer()">Stop</button><br><br>
-  Dorayaki goal: <strong><span id="goaldisplay"></span></strong>&nbsp;&nbsp;|
-  Dorayaki caught:<strong><span id="output"></span></strong> -->
 
+  <main>
+   <div id="heroroad">
+   </div>
+   <h2 style="background-color:red;">While to be further developed, you can head to project section and see my works done!</h2>
+   <p>
+     To Be Developed
+   </p>
+   <h3>To Be Developed</h3>
+   <!-- <ul>
+    <li>Specialty Coffee and Tea</li>
+    <li>Bagels, Muffins, and Gluten-free Patries</li>
+    <li>Organic Salads</li>
+    <li>Music and Poetry Readings</li>
+    <li>Open Mic Night</li>
+   </ul> -->
+
+    <div>
+     To Be Developed<br>
+     <!-- <a id="mobile" href="tel:778-870-3820">778-870-3820</a>
+     <span id="desktop">778-870-3820</span> -->
+    </div>
+
+  </main>
+
+  <footer>
+    &copy; 2020 7inug1.github.io<br>
+    <a href="mailto:jwshin0397@gmail.com">jwshin0397@gmail.com</a>
+    <div>
+
+    </div>
+    <script>
+    $(document).ready(function(){
+      $('footer div').html("Page last modified on : " + document.lastModified);
+    });
+    </script>
+  </footer>
+</div>
 </body>
-</html>
