--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JavaJam Coffee House Music</title>
+  <title>Jinwook Shin(Jin)'s Project Collection</title>
   <link rel="stylesheet" href="javajam.css">
 
   <script
