--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To Be Developed</title>
+  <title>Jinwook Shin(Jin)'s Project Collection</title>
   <link rel="stylesheet" href="javajam.css">
 </head>
 
