--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>JavaJam Coffee House Jobs</title>
+  <title>Jinwook Shin(Jin)'s Project Collection</title>
 
 
  <link rel="stylesheet" href="javajam.css">
@@ -27,7 +27,7 @@
   <main>
     <div id="herojobs">
     </div>
-   <h2>To Be Developed</h2>
+   <h2>Project</h2>
    <p>
      To Be Developed
      <!-- Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine! Join our Mug Club
