--- a/about.html
+++ b/about.html
@@ -30,27 +30,27 @@
     </div>
     <h2>To Be Developed</h2>
     <p>
-      <a id="hover" href="#">To Be Developed</a>
+      <!-- <a id="hover" href="#">To Be Developed</a>
 
       <script>
       $(document).ready(function(){
         $('#hover').hover(function(){alert("To Be Developed")})
-      });
-      </script><br><br>
+      }); -->
+      <!-- </script><br><br> -->
       To Be Developed
     </p>
 
     <h4>To Be Developed</h4>
-    <div class="details">
+    <!-- <div class="details">
       <a href="./lab6image/melanie.jpg"><img src="./lab6image/melaniethumb.jpg" alt="melanie with guitar" width="100" height="100" class="floatleft"></a>
       To Be Developed
-    </div>
+    </div> -->
 
     <h4>To Be Developed</h4>
-    <div class="details">
+    <!-- <div class="details">
       <a href="./lab6image/greg.jpg"><img src="./lab6image/gregthumb.jpg" alt="greg with guitar" width="100" height="100" class="floatleft"></a>
       To Be Developed
-    </div>
+    </div> -->
 
   </main>
 
