--- a/about.html
+++ b/about.html
@@ -28,25 +28,31 @@
   <main>
     <div id="heroguitar">
     </div>
-    <h2>To Be Developed</h2>
+    <h2>About Me</h2>
     <p>
-      <!-- <a id="hover" href="#">To Be Developed</a>
+      I am currently pursuing Diploma of Computer Studies at Langara College. Previously, I was studying
+      Public Administration at Hankuk University of Foreign Studies in Seoul, South Korea. I decided to switch my major
+      as I have always been interested in Information Technology.<br><br>
 
-      <script>
-      $(document).ready(function(){
-        $('#hover').hover(function(){alert("To Be Developed")})
-      }); -->
-      <!-- </script><br><br> -->
-      To Be Developed
+      It was my very first time learning programming when I came to Vancouver. There were times that programming got
+      me very frustrated, those were great opportunities to let me change my obsolete mindset to become a more mature person.<br><br>
+
+      Other than my academic career, I like to read books, do exercising, and watch self-development and motivational videos to
+      learn life lessons. As a student pursuing a new career path, I also wish to be a better programmer, so I try to allocate
+      my free time in studying coding as well.<br><br>
+
+      Thanks for taking your time to browse my website. I hope you have a great day.
+
+
     </p>
 
-    <h4>To Be Developed</h4>
+    <!-- <h4>To Be Developed</h4> -->
     <!-- <div class="details">
       <a href="./lab6image/melanie.jpg"><img src="./lab6image/melaniethumb.jpg" alt="melanie with guitar" width="100" height="100" class="floatleft"></a>
       To Be Developed
     </div> -->
 
-    <h4>To Be Developed</h4>
+    <!-- <h4>To Be Developed</h4> -->
     <!-- <div class="details">
       <a href="./lab6image/greg.jpg"><img src="./lab6image/gregthumb.jpg" alt="greg with guitar" width="100" height="100" class="floatleft"></a>
       To Be Developed
