--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,9 @@
   <main>
     <div id="herojobs">
     </div>
-   <h2>Project</h2>
+   <h2>Contact</h2>
    <p>
-     To Be Developed
-     <!-- Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine! Join our Mug Club
-     and get a 10% discount on each cup of coffee you purchase &mdash; ask the barista for details." -->
+     Please fill out the form or reach me directly at : <br><br>&nbsp;778-870-3820<br>&nbsp;jwshin0397@gmail.com.
    </p>
    <form method="post" action="http://webdevbasics.net/scripts/javajam8.php">
      <label for="name">*Name:</label>
@@ -40,9 +38,10 @@
      <input type="email" name="myEmail" id="email" required>
      <label for="experience">*Experience:</label>
      <textarea name="myExperience" rows="2" cols="20" required></textarea>
-
-     <input type="submit" value="Apply Now" id="mySubmit">
+     <input type="submit" value="Send" id="mySubmit" style="margin-left:260px">
    </form>
+
+
 
   </main>
 
