--- a/index.html
+++ b/index.html
@@ -30,24 +30,16 @@
   <main>
    <div id="heroroad">
    </div>
-   <h2 style="background-color:red;">While to be further developed, you can head to project section and see my works done!</h2>
-   <p>
+   <h2>Home</h2>
+   <!-- <p>
      To Be Developed
-   </p>
-   <h3>To Be Developed</h3>
-   <!-- <ul>
-    <li>Specialty Coffee and Tea</li>
-    <li>Bagels, Muffins, and Gluten-free Patries</li>
-    <li>Organic Salads</li>
-    <li>Music and Poetry Readings</li>
-    <li>Open Mic Night</li>
-   </ul> -->
-
-    <div>
-     To Be Developed<br>
+   </p> -->
+   <img src="./lab6image/jin.jpg" alt="Profile Picture" width=45% height="45%"><br><br>
+   &nbsp;&nbsp;<strong>Jinwook Shin</strong><br>
+   &nbsp;&nbsp;Computer Studies student at Langara College<br>
      <!-- <a id="mobile" href="tel:778-870-3820">778-870-3820</a>
      <span id="desktop">778-870-3820</span> -->
-    </div>
+
 
   </main>
 
