--- a/project.html
+++ b/project.html
@@ -24,9 +24,11 @@
   <main>
     <div id="heromugs">
     </div>
-   <h2>To Be Developed</h2>
+   <h2>Project</h2>
    <p>
-     Computer Science projects done while studying at Langara College. They are to be further developed, revised, and improved.
+     Here I have a list of my personal projects done while studying at Langara College. I am in search of more and more opportunities
+     to grow my skillsets in programming industry. While they may look immature at the moment, I have affection towards my works and
+     am planning to further develop these applications to have their best form. 
      <!-- Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine! Join our Mug Club
      and get a 10% discount on each cup of coffee you purchase &mdash; ask the barista for details." -->
    </p>
