--- a/index.html
+++ b/index.html
@@ -1,59 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jinwook Shin's Website - Home</title>
+    <link rel="stylesheet" href="portfolio.css" />
 
-<head>
- <meta charset="utf-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Jinwook Shin(Jin)'s Project Collection</title>
- <link rel="stylesheet" href="javajam.css">
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.js"
+      integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
- <script
- 			  src="https://code.jquery.com/jquery-3.4.1.slim.js"
- 			  integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
- 			  crossorigin="anonymous">
- </script>
-</head>
+  <body>
+    <div id="wrapper">
+      <header><h1>Jinwook Shin's Website</h1></header>
 
-<body>
-  <div id="wrapper">
-    <header><h1>Jinwook Shin(Jin)'s Project</h1></header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="project.html">Project</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
 
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="project.html">Project</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+      <main>
+        <h2>Home</h2>
+        <div class="profile__column">
+          <img
+            src="./lab6image/jin.jpg"
+            alt="Profile Picture"
+            width="45%"
+            height="45%"
+          />
+          <div class="profile__content">
+            <span class="profile__name">Jinwook Shin</span><br />
+            <span class="profile__desc"
+              >Computer Studies student at Langara College</span
+            >
+          </div>
+        </div>
+        <!-- <span class="text1">Computer Studies student at Langara College</span> -->
+        <!-- &nbsp;&nbsp;<strong>Jinwook Shin</strong><br />
+        &nbsp;&nbsp;Computer Studies student at Langara College<br /> -->
+      </main>
 
-  <main>
-   <div id="heroroad">
-   </div>
-   <h2>Home</h2>
-   <!-- <p>
-     To Be Developed
-   </p> -->
-   <img src="./lab6image/jin.jpg" alt="Profile Picture" width=45% height="45%"><br><br>
-   &nbsp;&nbsp;<strong>Jinwook Shin</strong><br>
-   &nbsp;&nbsp;Computer Studies student at Langara College<br>
-     <!-- <a id="mobile" href="tel:778-870-3820">778-870-3820</a>
-     <span id="desktop">778-870-3820</span> -->
+      <footer>
+        &copy; 2020 7inug1.github.io<br />
+        <a href="mailto:jwshin0397@gmail.com">jwshin0397@gmail.com</a>
 
-
-  </main>
-
-  <footer>
-    &copy; 2020 7inug1.github.io<br>
-    <a href="mailto:jwshin0397@gmail.com">jwshin0397@gmail.com</a>
-    <div>
-
+        <script>
+          $(document).ready(function () {
+            $("footer div").html(
+              "Page last modified on : " + document.lastModified
+            );
+          });
+        </script>
+      </footer>
     </div>
-    <script>
-    $(document).ready(function(){
-      $('footer div').html("Page last modified on : " + document.lastModified);
-    });
-    </script>
-  </footer>
-</div>
-</body>
+  </body>
+</html>
