--- a/project.html
+++ b/project.html
@@ -1,78 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jinwook Shin's Website - Project</title>
+    <link rel="stylesheet" href="portfolio.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jinwook Shin(Jin)'s Project Collection</title>
-  <link rel="stylesheet" href="javajam.css">
-</head>
+  <body>
+    <div id="wrapper">
+      <header><h1>Jinwook Shin's Website</h1></header>
 
-<body>
-  <div id="wrapper">
-  <header><h1>Jinwook Shin(Jin)'s Project</h1></header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="project.html">Project</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
 
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="project.html">Project</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+      <main>
+        <div id="heromugs"></div>
+        <h2>Project</h2>
 
-  <main>
-    <div id="heromugs">
+        <p class="para">
+          &nbsp;&nbsp;&nbsp;&nbsp;Here I have a list of my personal projects
+          done while studying at Langara College. I am in search of more
+          opportunities to grow my skillsets in programming industry. While they
+          may look immature at the moment, I have affection towards my works and
+          am planning to further develop these applications to get close to
+          their best form.
+        </p>
+        <br />
+        <table border="1">
+          <tr>
+            <th>Programming Language</th>
+            <th>Projects</th>
+          </tr>
+          <tr>
+            <td>JavaScript</td>
+            <td>
+              <a href="./AppleDropperProject/appledropper.html"
+                >Go to : Apple Dropper Project</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>HTML & CSS</td>
+            <td>
+              <a href="./GastownClothingStores/index.html"
+                >Go to : Gastown Clothing Stores</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>HTML & CSS</td>
+            <td>
+              <a href="./kakao_clone_v2/index.html"
+                >Go to : Kakao Messenger Cloning</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Java</td>
+            <td>
+              <a href="https://github.com/7inug1/java_oop_chess"
+                >Go to : GUI Java Chess Program</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>SQL & PHP</td>
+            <td>
+              Food Delivery Website using DATABASE (To be further implemented
+              due to constrains like XAMPP)
+            </td>
+          </tr>
+        </table>
+      </main>
+
+      <footer>
+        &copy; 2020 7inug1.github.io<br />
+        <a href="mailto:jwshin0397@gmail.com">jwshin0397@gmail.com</a>
+      </footer>
     </div>
-   <h2>Project</h2>
-   <p>
-     Here I have a list of my personal projects done while studying at Langara College. I am in search of more and more opportunities
-     to grow my skillsets in programming industry. While they may look immature at the moment, I have affection towards my works and
-     am planning to further develop these applications to have their best form. 
-     <!-- Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine! Join our Mug Club
-     and get a 10% discount on each cup of coffee you purchase &mdash; ask the barista for details." -->
-   </p>
-   <table border="1">
-    <!--
-     <li><a href="./AppleDropperProject/appledropper.html">JavaScript : Apple Dropper Project</a></li>
-     <li><a href="./GastownClothingStores/index.html">HTML & CSS : Gastown Clothing Stores</a></li>
-     <li>Java : GUI Chess Program (To be further developed)</a></li>
-     <li>SQL & PHP : Food Delivery Website using DATABASE (To be further developed) </a></li>
-   -->
-       <tr>
-         <td>JavaScript</td>
-         <td><a href="./AppleDropperProject/appledropper.html">Go to : Apple Dropper Project</a></td>
-       </tr>
-       <tr>
-         <td>HTML & CSS</td>
-         <td><a href="./GastownClothingStores/index.html">Go to : Gastown Clothing Stores</a>
-         </td>
-       </tr>
-       <tr>
-         <td>Java</td>
-         <td>GUI Chess Program (To be further developed)</td>
-       </tr>
-       <tr>
-         <td>SQL & PHP</td>
-         <td>Food Delivery Website using DATABASE (To be further developed)</td>
-       </tr>
-   </table>
-   <!-- <dl>
-    <dt><strong>Just Java</strong></dt>
-      <dd>Regular house blend, decaffeinated coffee, or flavor of the day.<br>
-      Endless Cup $3.00</dd>
-    <dt><strong>Cafe au Lait</strong></dt>
-      <dd>House blended coffee infused into a smooth, steamed milk.<br>
-      Single $3.00 Double $4.00</dd>
-    <dt><strong>Iced Cappuccino</strong></dt>
-      <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>
-      Single $4.75 Double $6.00</dd>
-   </dl> -->
-  </main>
-
-  <footer>
-    &copy; 2020 7inug1.github.io<br>
-    <a href="mailto:jwshin0397@gmail.com">jwshin0397@gmail.com</a>
-  </footer>
-</div>
-</body>
+  </body>
+</html>
