--- a/project.html
+++ b/project.html
@@ -66,7 +66,7 @@
             <td>Java</td>
             <td>
               <a href="https://github.com/7inug1/java_oop_chess"
-                >Go to : GUI Java Chess Program</a
+                >Go to : GUI Java Chess in Github</a
               >
             </td>
           </tr>
@@ -75,6 +75,12 @@
             <td>
               Food Delivery Website using DATABASE (To be further implemented
               due to constrains like XAMPP)
+            </td>
+          </tr>
+          <tr>
+            <td>Github</td>
+            <td>
+              <a href="https://github.com/7inug1">Go to : Github</a>
             </td>
           </tr>
         </table>
