--- a/project.html
+++ b/project.html
@@ -1,95 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jinwook Shin's Website - Project</title>
-    <link rel="stylesheet" href="portfolio.css" />
-  </head>
 
-  <body>
-    <div id="wrapper">
-      <header><h1>Jinwook Shin's Website</h1></header>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jinwook Shin's Website - Project</title>
+  <link rel="stylesheet" href="portfolio.css" />
+</head>
 
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="project.html">Project</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+<body>
+  <div id="wrapper">
+    <header>
+      <h1>Jinwook Shin's Website</h1>
+    </header>
 
-      <main>
-        <div id="heromugs"></div>
-        <h2>Project</h2>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="project.html">Project</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-        <p class="para">
-          &nbsp;&nbsp;&nbsp;&nbsp;Here I have a list of my personal projects
-          done while studying at Langara College. I am in search of more
-          opportunities to grow my skillsets in programming industry. While they
-          may look immature at the moment, I have affection towards my works and
-          am planning to further develop these applications to get close to
-          their best form.
-        </p>
-        <br />
-        <table border="1">
-          <tr>
-            <th>Programming Language</th>
-            <th>Projects</th>
-          </tr>
-          <tr>
-            <td>JavaScript</td>
-            <td>
-              <a href="./AppleDropperProject/appledropper.html"
-                >Go to : Apple Dropper Project</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>HTML & CSS</td>
-            <td>
-              <a href="./GastownClothingStores/index.html"
-                >Go to : Gastown Clothing Stores</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>HTML & CSS</td>
-            <td>
-              <a href="./kakao_clone_v2/index.html"
-                >Go to : Kakao Messenger Cloning</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>Java</td>
-            <td>
-              <a href="https://github.com/7inug1/java_oop_chess"
-                >Go to : GUI Java Chess in Github</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>SQL & PHP</td>
-            <td>
-              Food Delivery Website using DATABASE (To be further implemented
-              due to constrains like XAMPP)
-            </td>
-          </tr>
-          <tr>
-            <td>Github</td>
-            <td>
-              <a href="https://github.com/7inug1">Go to : Github</a>
-            </td>
-          </tr>
-        </table>
-      </main>
+    <main>
+      <div id="heromugs"></div>
+      <h2>Project</h2>
 
-      <footer>
-        &copy; 2020 7inug1.github.io<br />
-        <a href="mailto:jwshin0397@gmail.com">jwshin0397@gmail.com</a>
-      </footer>
-    </div>
-  </body>
+      <p class="para">
+        &nbsp;&nbsp;&nbsp;&nbsp;Here I have a list of my personal projects
+        done while studying at Langara College. I am in search of more
+        opportunities to grow my skillsets in programming industry. While they
+        may look immature at the moment, I have affection towards my works and
+        am planning to further develop these applications to get close to
+        their best form.
+      </p>
+      <br />
+      <table border="1">
+        <tr>
+          <th>Programming Language</th>
+          <th>Projects</th>
+        </tr>
+        <tr>
+          <td>JavaScript</td>
+          <td>
+            <a href="./AppleDropperProject/appledropper.html">Go to : Apple Dropper Project</a>
+          </td>
+        </tr>
+        <tr>
+          <td>JavaScript</td>
+          <td>
+            <a href="./momentum_js/index.html">Go to : ToDo Application</a>
+          </td>
+        </tr>
+        <tr>
+          <td>HTML & CSS</td>
+          <td>
+            <a href="./GastownClothingStores/index.html">Go to : Gastown Clothing Stores</a>
+          </td>
+        </tr>
+        <tr>
+          <td>HTML & CSS</td>
+          <td>
+            <a href="./kakao_clone_v2/index.html">Go to : Kakao Messenger Cloning</a>
+          </td>
+        </tr>
+        <tr>
+          <td>Java</td>
+          <td>
+            <a href="https://github.com/7inug1/java_oop_chess">Go to : GUI Java Chess in Github</a>
+          </td>
+        </tr>
+        <tr>
+          <td>SQL & PHP</td>
+          <td>
+            Food Delivery Website using DATABASE (To be further implemented
+            due to constrains like XAMPP)
+          </td>
+        </tr>
+        <tr>
+          <td>Github</td>
+          <td>
+            <a href="https://github.com/7inug1">Go to : Github</a>
+          </td>
+        </tr>
+      </table>
+    </main>
+
+    <footer>
+      &copy; 2020 7inug1.github.io<br />
+      <a href="mailto:jwshin0397@gmail.com">jwshin0397@gmail.com</a>
+    </footer>
+  </div>
+</body>
+
 </html>
