--- a/GastownClothingStores/index.html
+++ b/GastownClothingStores/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html id="gastownpic" lang="en">
-<a href="info.html"><img src="gastownn.jpg" alt="gastown" height="100%" width="100%" ></a>
-<head>
-  <title>All About Gastown Fashion</title>
-  <meta charset="utf-8">
-  <meta name="gastown description" content="information on gastown shops" name="description" content="Gastown offers a lot of places to shop. They offer one of the best brands out there. From Japanese casual to minimal clothing, everything's there.">
+  <a href="info.html"
+    ><img src="gastownn.jpg" alt="gastown" height="100%" width="100%"
+  /></a>
+  <head>
+    <title>All About Gastown Fashion</title>
+    <meta charset="utf-8" />
+    <meta
+      name="gastown description"
+      content="information on gastown shops"
+      name="description"
+      content="Gastown offers a lot of places to shop. They offer one of the best brands out there. From Japanese casual to minimal clothing, everything's there."
+    />
+  </head>
 
-</head>
-
-<body>
-  last modified date : 
-  <script>
-     document.write(document.lastModified);
-  </script>
-</body>
-
+  <body>
+    last modified date :
+    <script>
+      document.write(document.lastModified);
+    </script>
+  </body>
 </html>
