--- a/about.html
+++ b/about.html
@@ -4,18 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jinwook Shin's Website - About</title>
     <link rel="stylesheet" href="portfolio.css" />
-
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.4.1.slim.js"
       integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
   </head>
-
   <body>
     <div id="wrapper">
       <header><h1>Jinwook Shin's Website</h1></header>
-
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -25,7 +22,6 @@
         </ul>
       </nav>
       <main>
-        <div id="heroguitar"></div>
         <h2>About Me</h2>
         <p class="para">
           &nbsp;&nbsp;&nbsp;&nbsp;I am currently pursuing Diploma of Computer
@@ -48,18 +44,6 @@
           &nbsp;&nbsp;&nbsp;&nbsp;Thanks for taking your time to browse my
           website. I hope you have a great day.
         </p>
-
-        <!-- <h4>To Be Developed</h4> -->
-        <!-- <div class="details">
-      <a href="./lab6image/melanie.jpg"><img src="./lab6image/melaniethumb.jpg" alt="melanie with guitar" width="100" height="100" class="floatleft"></a>
-      To Be Developed
-    </div> -->
-
-        <!-- <h4>To Be Developed</h4> -->
-        <!-- <div class="details">
-      <a href="./lab6image/greg.jpg"><img src="./lab6image/gregthumb.jpg" alt="greg with guitar" width="100" height="100" class="floatleft"></a>
-      To Be Developed
-    </div> -->
       </main>
 
       <footer>
