--- a/GastownClothingStores/info.html
+++ b/GastownClothingStores/info.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>All About Gastown Fashion</title>
+    <meta charset="utf-8" />
+    <meta
+      name="gastown description"
+      content="information on gastown shops"
+      name="description"
+      content="Gastown offers a lot of places to shop. They offer one of the best brands out there. From Japanese casual to minimal clothing, everything's there."
+    />
+    <link rel="stylesheet" href="project.css" />
+  </head>
 
-<head>
-  <title>All About Gastown Fashion</title>
-  <meta charset="utf-8">
-  <meta name="gastown description" content="information on gastown shops" name="description" content="Gastown offers a lot of places to shop. They offer one of the best brands out there. From Japanese casual to minimal clothing, everything's there.">  <link rel="stylesheet" href="project.css">
-</head>
+  <body>
+    <a href="index.html"
+      ><header><h1>Gastown</h1></header></a
+    >
 
-<body>
-  <a href="index.html"><header><h1>Gastown</h1></header></a>
-
-
-  <nav>
-
+    <nav>
       <a href="info.html">Gastown?</a>&nbsp;&nbsp;&nbsp;
       <a href="shops.html">Shops</a>&nbsp;&nbsp;&nbsp;
       <a href="comments.html">Comments</a>
+    </nav>
+    <main>
+      <h2>About</h2>
+      <!-- <audio controls="controls">
+        <source src="freeClassicalMusic.mp3" type="audio/mpeg" />
+        <a href="freeClassicalMusic.mp3">Download Audio</a></audio
+      ><br /><br /> -->
+      <div id="gastownpic"></div>
 
-  </nav>
-
-  <main>
-
-    <h2>About</h2><br>
-    <audio controls = "controls">
-      <source src="freeClassicalMusic.mp3" type="audio/mpeg">
-    <a href="freeClassicalMusic.mp3">Download Audio</a>
-  </audio><br><br>
-    <div id="gastownpic">
-    </div>
-    <p>Gastown is not like the usual places in Vancouver. Gastown has all the "hip" restaurants and clothing stores are.
-    If you are looking for a place to spend at, I would definitely recommend Gastown. You can do some shopping and when you get tired,
-    there are a lot of cafes with great interior design. There are a lot of shops that sell great accessories, furnitures, and so on.
-    </p>
-  </main>
-  <footer>
-    To make inquiry to the website manager :<br>
-    <a href="mailto:7inug1@gmail.com">7inug1@gmail.com</a>
-
-  </footer>
-</body>
-
+      <p>
+        Gastown is not like the usual places in Vancouver. Gastown has all the
+        "hip" restaurants and clothing stores are. If you are looking for a
+        place to spend at, I would definitely recommend Gastown. You can do some
+        shopping and when you get tired, there are a lot of cafes with great
+        interior design. There are a lot of shops that sell great accessories,
+        furnitures, and so on.
+      </p>
+    </main>
+    <footer>
+      To make inquiry to the website manager :<br />
+      <a href="mailto:7inug1@gmail.com">7inug1@gmail.com</a>
+    </footer>
+  </body>
 </html>
