--- a/letter.html
+++ b/letter.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+  <img src="./myLittleVader.jpg" alt="test"></img>
+
   <div id="statusBar">
     You're currently connected:  <span id="onlineOfflineStatus">I am not sure of the status yet!</span>
   </div>
