--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="project.html">Project</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="./letter.html">htmlProject</a></li>
+          <li><a href="./htmlProject/letter.html">htmlProject</a></li>
         </ul>
       </nav>
 
