--- a/htmlProject/letter.html
+++ b/htmlProject/letter.html
@@ -28,17 +28,17 @@
         <video id="video"></video>
           
         <button id="cameraOnButton">
-          <img src="./images/video.svg" alt=""></img>
+          <!-- <img src="./images/video.svg" alt=""></img> -->
           On
         </button>
 
         <button id="cameraOffButton">
-          <img src="./images/video-off.svg" alt=""></img>
+          <!-- <img src="./images/video-off.svg" alt=""></img> -->
           Off
         </button>
 
         <button id="cameraCaptureButton">
-          <img src="./images/camera.svg" alt=""></img>
+          <!-- <img src="./images/camera.svg" alt=""></img> -->
           Capture
         </button>
 
