--- a/sw-test/index.html
+++ b/sw-test/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <img src="./myLittleVader.jpg" alt="test"></img>
+  <img src="./myLittleVader.jpg" alt="test" width="320" height="240"></img>
 
   <div id="statusBar">
     You're currently connected:  <span id="onlineOfflineStatus">I am not sure of the status yet!</span>
@@ -23,7 +23,7 @@
 
   <main>
     <h1>WebCam</h1>
-    <div class="area">
+    <div id="area">
       <div id="cameraButtons">
         <video id="video"></video>
           
