--- a/sw-test/index.html
+++ b/sw-test/index.html
@@ -22,29 +22,23 @@
   </div>
 
   <main>
-    <h1>WebCam</h1>
     <div id="area">
-      <div id="cameraButtons">
-        <video id="video"></video>
-          
-        <button id="cameraOnButton">
-          <!-- <img src="./images/video.svg" alt=""></img> -->
-          On
-        </button>
-
-        <button id="cameraOffButton">
-          <!-- <img src="./images/video-off.svg" alt=""></img> -->
-          Off
-        </button>
-
-        <button id="cameraCaptureButton">
-          <!-- <img src="./images/camera.svg" alt=""></img> -->
-          Capture
-        </button>
-
-      </div> 
       
-      <canvas id="canvasOne" width="320" height="240"></canvas>
+      <div id="item1">
+        <h1>WebCam</h1>
+        <video id="video"></video>
+        <div id="cameraButtons">
+          <button id="cameraOnButton">On</button>
+          <button id="cameraOffButton">Off</button>
+          <button id="cameraCaptureButton">Capture</button>
+        </div>
+      </div> 
+
+      <div id="item2">
+        <h1>Gallery</h1>
+        <canvas id="canvasOne" width="320" height="240"></canvas>
+      </div> 
+
     </div> 
   </main>
 </body>
