test included-Star Wars SW

--- a/sw-test/index.html
+++ b/sw-test/index.html
@@ -20,7 +20,7 @@
   <div id="statusBar">
     You're currently connected:  <span id="onlineOfflineStatus">I am not sure of the status yet!</span>
   </div>
-
+  <a href="../sw-test-gh-pages/index.html"></a>
   <main>
     <div id="area">
       
