--- a/sw-test/index.html
+++ b/sw-test/index.html
@@ -19,8 +19,8 @@
 
   <div id="statusBar">
     You're currently connected:  <span id="onlineOfflineStatus">I am not sure of the status yet!</span>
-  </div>
-  <a href="../sw-test-gh-pages/index.html"></a>
+  </div><br>
+  <a href="../sw-test-gh-pages/index.html">test</a>
   <main>
     <div id="area">
       
