--- a/sw-test/index.html
+++ b/sw-test/index.html
@@ -20,7 +20,7 @@
   <div id="statusBar">
     You're currently connected:  <span id="onlineOfflineStatus">I am not sure of the status yet!</span>
   </div><br>
-  <a href="../sw-test-gh-pages/index.html">test</a>
+  <a href="../sw-test-gh-pages/index.html" id="test">test</a>
   <main>
     <div id="area">
       
