--- a/sw-test/index.html
+++ b/sw-test/index.html
@@ -9,8 +9,8 @@
   <script src="onlineOfflineEvent.js" type="text/javascript" defer></script>
   <script src="app.js" type="text/javascript" defer></script>
   <!-- <script src="sw.js" type="text/javascript" defer></script> -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <title>Document</title>
 </head>
 
