--- a/sw-test/index.html
+++ b/sw-test/index.html
@@ -53,30 +53,30 @@
     <div id="description">
       <div id="instruction">
       <h2>Instruction</h2>
-        <h3>1. Turn on the web camera by clicking 'On' button</h3>
-        <p>You can also turn it off by clicking the 'Off' button.</p>
-        <h3>2. Click 'Capture' button to save the still image</h3>
-        <p>The image will be saved to the canvas on the right and local storage.</p>
-        <h3>3. Draw on the photo captured</h3>
-        <p>Click and hold to keep drawing. Short click to draw dots.</p>
-        <h3>4. Get yourself disconnected from the Internet and refresh the page!</h3>
-        <p>Service worker and Cache running at the back allows you to have offline experience.</p><br>
+        <h3>1. Use the web camera with the buttons provided</h3>
+        <p></p>
+        <h3>2. Click 'Capture' button to take a photo</h3>
+        <p></p>
+        <h3>3. Try drawing on the photo with a pen in different colors</h3>
+        <p></p>
+        <h3>4. The website still works when you're offline!</h3>
+        <p></p><br>
       </div>
 
       <div id="components">
-      <h2> HTML Components</h2>
+      <h2> HTML Components with JavaScript</h2>
         <h3>1. On/Offline Eventlistener</h3> 
-        <p>Status Bar at the top of the page uses online/offline event listeners to 
-          indicates whether there is an online connection or not.</p>
+        <!-- <p>Status Bar at the top of the page uses online/offline event listeners to 
+          indicates whether there is an online connection or not.</p> -->
         <h3>2. Webcam & Canvas</h3>
-        <p>You will see two square boxes located in the middle of the page. On your left is a web camera. 
-        To your right is a canvas that works as an image holder. You can also draw on it. </p>
+        <!-- <p>You will see two square boxes located in the middle of the page. On your left is a web camera. 
+        To your right is a canvas that works as an image holder. You can also draw on it. </p> -->
         <h3>3. Service Worker</h3>
-        <p>The easy way to describe it is that it allows you to have an offline experience. In a more expert way,
-        it is one of the web workers that acts as a proxy server.  </p>
+        <!-- <p>The easy way to describe it is that it allows you to have an offline experience. In a more expert way,
+        it is one of the web workers that acts as a proxy server.  </p> -->
         <h3>4. Local Storage</h3>
-        Local storage is in use to store data on your local browser. It is better than using cookie in a way that
-        it is more secure and larger amount of data (about 5MB) can be stored. 
+        <!-- Local storage is in use to store data on your local browser. It is better than using cookie in a way that
+        it is more secure and larger amount of data (about 5MB) can be stored.  -->
         <p></p>
       </div>
     </div>
