--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <div id="no-mobile">
     <div id="no-mobile-title">PokemonAPI JS Portfolio </div>
-    <div>Please view the page on Tablet/Desktop</div>
+    <div id="no-mobile-alert">Mobile Landscape View NOT SUPPORTED. </div>
   </div>
 </body>
 </html>
