--- a/index.html
+++ b/index.html
@@ -4,46 +4,46 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jinwook Shin's Website - Home</title>
-
     <script src="./pokemonAPI.js" defer></script>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   </head>
-<body>
-  <main>
-    <!-- 1. header -->
-    <header> <h1 id="pokemonHeading">PokemonAPI JS Portfolio</h1></header>
+  
+  <body>
+    <main>
+      <!-- 1. header -->
+      <header> <h1 id="pokemonHeading">PokemonAPI JS Portfolio</h1></header>
 
-    <div class="grid">
-      <!-- 2. Menu -->
-      <div id="item1">
-        <div id="pokemonSubheading">
-          <h2 id="pokemonSubheadingText">Pokemon List </h2>
-          <h3 id="pokemonSubheadingCounter"></h3>
+      <div class="grid">
+        <!-- 2. Menu -->
+        <div id="item1">
+          <div id="pokemonSubheading">
+            <h2 id="pokemonSubheadingText">Pokemon List </h2>
+            <h3 id="pokemonSubheadingCounter"></h3>
+          </div>
+          <div id="pokemonListContainer"></div>
         </div>
-        <div id="pokemonListContainer"></div>
-      </div>
-      <!-- 3. Details -->
-      <div id="item2">
-        <div id="pokemonDetailsCardContainer">
-          <div id="pokemonDetailsCardTitle">Pokemon Card</div>   
-          <div id="pokemonDetailsCardSprite"></div>    
-          <div id="pokemonDetailsCardInfo"></div>     
+        <!-- 3. Details -->
+        <div id="item2">
+          <div id="pokemonDetailsCardContainer">
+            <div id="pokemonDetailsCardTitle">Pokemon Card</div>   
+            <div id="pokemonDetailsCardSprite"></div>    
+            <div id="pokemonDetailsCardInfo"></div>     
+          </div>
         </div>
       </div>
+    </main>
+    <!-- 4. Footer -->
+    <footer>
+      <small>Copyright &copy; 2020 Jinwook Shin</small><br>
+    </footer>
+
+    <!-- 5. no-mobile: for mobile landscape -->
+    <div id="no-mobile">
+      <div id="no-mobile-title">PokemonAPI JS Portfolio </div>
+      <div id="no-mobile-alert">Mobile Landscape View NOT SUPPORTED. </div>
     </div>
-  </main>
-  <!-- 4. Footer -->
-  <footer>
-    <small>Copyright &copy; 2020 Jinwook Shin</small><br>
-  </footer>
-
-  <div id="no-mobile">
-    <div id="no-mobile-title">PokemonAPI JS Portfolio </div>
-    <div id="no-mobile-alert">Mobile Landscape View NOT SUPPORTED. </div>
-  </div>
-</body>
+  </body>
 </html>
