--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- 5. no-mobile: for mobile landscape -->
     <div id="no-mobile">
       <div id="no-mobile-title">PokemonAPI JS Portfolio </div>
-      <div id="no-mobile-alert">Mobile Landscape View NOT SUPPORTED. </div>
+      <div id="no-mobile-alert">Please use a portrait mode or a bigger (770px * 495px) landscape mode to view this page.</div>
     </div>
   </body>
 </html>
