--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="./pokemonIndex.html">pokemonAPI portfolio</a>
+  <a href="./pokemonAPIportfolio/pokemonAPIindex.html">pokemonAPI portfolio</a><br>
+  <a href="./html5portfolio/html5index.html">HTML5 portfolio</a>
 </body>
 </html>
