--- a/html5portfolio/html5index.html
+++ b/html5portfolio/html5index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div id="statusBar">
-    You're currently connected:  <span id="onlineOfflineStatus">I am not sure of the status yet!</span>
+    <span id="onlineOfflineStatus">I am not sure of the status yet!</span>
   </div><br>
 
   <div class="split left-top">
