--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <a href="./pokemonAPIportfolio/pokemonAPIindex.html">pokemonAPI portfolio</a><br>
-  <a href="./html5portfolio/html5index.html">HTML5 portfolio</a>
+  <a href="./html5portfolio/html5index.html">HTML5 portfolio</a><br>
+  <a href="./appleDropperPortfolio/appledropper.html">Doraemon portfolio</a>
 </body>
 </html>
