file name updated

--- a/doraemonJSminiGamePortfolio/doraemonJSminiGame.html
+++ b/doraemonJSminiGamePortfolio/doraemonJSminiGame.html
@@ -8,7 +8,7 @@
   </style>
   <title>Apple Dropper Project</title>
   <meta charset="utf-8">
-  <script src="appledropper.js" type="text/javascript" defer></script>
+  <script src="doraemonJSminiGame.js" type="text/javascript" defer></script>
 </head>
 
 <body>
