--- a/html5portfolio/html5index.html
+++ b/html5portfolio/html5index.html
@@ -15,7 +15,7 @@
   </div><br>
 
   <div class="split left-top">
-    <video id="video"></video>
+    <video id="video" width="641" height="462.933"></video>
   </div>
   <div class="split left-bottom">
     <div id="cameraButtons">
@@ -26,9 +26,9 @@
   </div>
 
   <div class="split right-top">
-        <div id="canvasAndFrame">
-          <canvas id="frame" width="399" height="330"></canvas> <!-- Photo frame for the canvas -->
-          <canvas id="canvasOne" width="320" height="240"></canvas><br> <!-- Drawing canvas -->
+        <div id="canvasAndFrame" width="641" height="462.933">
+          <canvas id="frame" width="641" height="462.933"></canvas> <!-- Photo frame for the canvas -->
+          <canvas id="canvasOne" width="641" height="462.933"></canvas><br> <!-- Drawing canvas -->
           
 
         </div>
