note-app portfolio added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <a href="./pokemonAPIportfolio/pokemonAPIindex.html">pokemonAPI portfolio</a><br>
   <a href="./html5portfolio/html5index.html">HTML5 portfolio</a><br>
-  <a href="./doraemonJSminiGamePortfolio/doraemonJSminiGame.html">Doraemon portfolio</a>
+  <a href="./doraemonJSminiGamePortfolio/doraemonJSminiGame.html">Doraemon portfolio</a><br>
+  <a href="./note-app/build/index.html">Note App react portfolio</a>
 </body>
 </html>
