--- a/pokemonAPIportfolio/pokemonAPIindex.html
+++ b/pokemonAPIportfolio/pokemonAPIindex.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jinwook Shin's Website - Home</title>
+    <title>Pokemon API - Jinwook Shin's Portfolio Website</title>
     <script src="./pokemonAPI.js" defer></script>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
