--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <div id="child-directory">
       <span class="file-individual">
-        <i class="far fa-file-alt"></i><a href="./note-app/build/index.html"> Dog API portfolio <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i></a>
+        <i class="far fa-file-alt"></i><a href="*"> Dog API portfolio <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i></a>
       </span>
       <span class="date-modified"><span id="dog-api">2021/01/01 - 2021/02/01</span></span><br>
 
