--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <span class="date-modified"><span id="dog-api">2021/01/01 - 2021/02/01</span></span><br>
 
       <span class="file-individual">
-        <i class="far fa-file-alt"></i><a href="./note-app/build/index.html"> Note App react portfolio <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i></a>
+        <i class="far fa-file-alt"></i><a href="./noteReactPortfolio/build/index.html"> Note App react portfolio <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i></a>
       </span>
       <span class="date-modified"><span id="note-app">2021/01/01 - 2021/02/01</span></span><br>
 
