downloadable resume updated

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     
     <div id="parent-directory">
       <h3><i class="fab fa-github"></i> <a href="https://github.com/7inug1">github.com/7inug1</a></h3>
-      <!-- <span class="date-modified">—</span> -->
+      <br><br>
+      <!-- <i class="fas fa-file-pdf"></i> --><a href="/images/myw3schoolsimage.jpg" download></a>
+      <h3><i class="fas fa-file-pdf"></i> <a href="./downloads/신진욱_프론트엔드_이력서.pdf" download>&nbsp;Resume</a></h3>
       <br><br>
       <h3><i class="far fa-folder"></i> 7inug1.github.io/portfolio</h3>
-      <!-- <span class="date-modified">—</span> -->
       <br>
     </div>
     
