update date announced

--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
   </div>
   <br><hr>
   <h1>Portfolio</h1>
+  <div id="portfolio-intro">Soon to be updated in February, 2021</div>
 </body>
 </html>
