small update for reparing the website

--- a/doraemonJSminiGamePortfolio/index.html
+++ b/doraemonJSminiGamePortfolio/index.html
@@ -6,13 +6,13 @@
         background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
     }
   </style>
-  <title>Apple Dropper Project</title>
+  <title>Doraemon CanvasJS Project</title>
   <meta charset="utf-8">
   <script src="doraemonJSminiGame.js" type="text/javascript" defer></script>
 </head>
 
 <body>
-  <h2>Jinwook Shin's CPSC 1045 Apple Dropper Project</h2>
+  <h2>Doraemon CanvasJS Project</h2>
   <strong>Instruction : Use the arrow keys or the buttons provided to play the game!</strong><br>
   <canvas id="myCanvas" style="border-style: solid" width="600px" height="400px"></canvas><br>
   <button type="button" onclick="moveLeft()">Left</button>
