--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <div id="contents">
     
     <div id="parent-directory">
-      <h3><i class="fab fa-github"></i> <a href="https://github.com/7inug1">github.com/7inug1</a></h3>
-      <br><br>
+      <!-- <h3><i class="fab fa-github"></i> <a href="https://github.com/7inug1">github.com/7inug1</a></h3> -->
+      <!-- <br><br> -->
       <!-- <i class="fas fa-file-pdf"></i> --><a href="/images/myw3schoolsimage.jpg" download></a>
-      <h3><i class="fas fa-file-pdf"></i> <a href="./downloads/신진욱_프론트엔드_이력서.pdf" download>&nbsp;Resume</a></h3>
+      <!-- <h3><i class="fas fa-file-pdf"></i> <a href="./downloads/_프론트엔드_이력서.pdf" download>&nbsp;Resume</a></h3> -->
       <br><br>
       <h3><i class="far fa-folder"></i> 7inug1.github.io/portfolio</h3>
       <br>
@@ -35,7 +35,7 @@
       <span class="date-modified"><span id="dog-api">2021/01/01 - 2021/02/01</span></span><br>
 
       <span class="file-individual">
-        <i class="far fa-file-alt"></i><a href="./noteReactPortfolio/build/index.html"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> Note App react portfolio </a>&nbsp;(Desktop ✅ | Mobile soon ⚠️)
+        <i class="far fa-file-alt"></i><a href="./noteReactPortfolio/build/index.html"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> Note App react portfolio </a>&nbsp;(Chrome not supported currently | Desktop ✅ | Mobile soon ⚠️)
       </span>
       <span class="date-modified"><span id="note-app">2021/01/01 - 2021/02/01</span></span><br>
 
